--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,12 +1,12 @@
 name: Tests deployment script
 
 on:
-    # push:
-    #     branches:
-    #         - main
+    push:
+        branches:
+            - main
     workflow_dispatch:
-    # schedule:
-    #    - cron: "30 5 * * *"
+    schedule:
+       - cron: "30 5 * * *"
 
 
 env:
