--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -22,4 +22,6 @@ jobs:
               run: |
                 echo $DOCKER_COMPOSE > docker-compose.yml
                 echo $ENV > .env 
+                cat docker-compose.yml
+                cat .env
                 docker compose up
